[tool.poetry]
name = "idle-time"
version = "0.1.0"
description = "Detect user idle time"
authors = ["Alexander Frenzel <alex@relatedworks.com>"]

readme = "README.md"
license = "BSD-3-Clause"

homepage = "https://github.com/escaped/idle_time"
repository = "https://github.com/escaped/idle_time"
documentation = "https://github.com/escaped/idle_time"

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"
Jeepney = "^0.4.0"
pywin32 = {version = "^224.0",platform = "windows"}

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
flake8-isort = "^2.7"
black = "=19.3b0"
mypy = "^0.701.0"
flake8-mypy = "^17.8"

[tool.black]
line-length = 90
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
