[bdist_wheel]
universal = 1


[metadata]
description-file =
    README.md


[isort]
line_length = 90
known_project = idle_time


[flake8]
exclude =
    .git,
    __pycache__,
    dist

max-line-length = 90
max-complexity = 9


[coverage:run]
branch = True
include = idle_time/*
omit =
    */tests/*

[coverage:report]
show_missing = True
exclude_lines =
  pragma: no cover

  # Don't complain about missing debug-only code:
  def __unicode__
  def __repr__
  def __str__

  # Don't complain if tests don't hit defensive assertion code:
  raise AssertionError
  raise NotImplementedError

  # Don't complain if non-runnable code isn't run:
  if __name__ == .__main__.:


[tool:pytest]
addopts = --flake8 --mypy --durations=10 --cov=idle_time --cov-report term
norecursedirs = build dist
testpaths =
    idle_time
    tests


[mypy]
python_version=3.7

ignore_missing_imports = True
